2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug 314593, support firefox-config
	
2005-09-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug #317549
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-structure.c:
	* rsvg-shapes.c: Bug 371148 - C89 fixes

	* gdk-pixbuf-loader/Makefile.am
	* gtk-engine/Makefile.am: Bug 316803 - Win32 mingw build fixes
	
2005-09-22  Rodney Dawes  <dobey@novell.com>

	* configure.in: GNOME_REQUIRE_PKGCONFIG doesn't exist, so remove it
	so that we don't get a weird warning when running configure

2005-09-16  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Scan the first 1024 chars for <svg. 100
	Wasn't sufficient for a lot of icon themes.
	
2005-08-10 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* Makefile.am, configure.in: Made compatibility librarys build only if there is a backend compiled. Made programs not require libart to build.

2005-08-08  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (_rsvg_handle_get_pixbuf): Un-premultiply ARGB->RGBA instead of going through a PNG stream first
	* rsvg-cairo-draw.c (rsvg_cairo_get_image_of_node): Ditto
	
2005-08-08  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.c: (_set_source_rsvg_linear_gradient),
	(_set_source_rsvg_radial_gradient): Invert matrix since cairo's
	pattern matrix is from user space to pattern space.

2005-08-09 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: Made inheritance work with pservers. Tried to get transforms on pservers working.
	
2005-08-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo-draw.c (rsvg_cairo_render_path): Implement line join, cap, width, dash, miter limit
	(rsvg_cairo_render_image): Drawing images now works
	(rsvg_cairo_push_discrete_layer): Largely implemented
	(rsvg_cairo_pop_discrete_layer): Largely implemented
	(_set_source_rsvg_radial_gradient): Make this work for the few tests I have
